[tool.poetry]
name = "network-replay"
version = "0.1.0"
description = "Records and replays network interactions"
authors = ["Sam Morgan <sama4mail@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
httpretty = "^1.1.4"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
requests = "^2.31.0"
ruff = "^0.1.6"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
httpx = "^0.25.2"
pillow = "^10.1.0"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
urllib3 = "^2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest]
testpaths = "tests"

[tool.pytest.ini_options]
markers = [
    "network_replay: Records network interactions and verifies them on replay",
]

[tool.coverage.run]
branch = true
omit = ["tests/*"]
